<resources>
    <string name="app_name">AKapp</string>
    <string name="navigation_news_feed">News Feed</string>
    <string name="navigation_chat">Chat</string>
    <string name="navigation_calendar">Calendar</string>
    <string name="navigation_settings">Settings</string>
    <string name="login_button">Zaloguj</string>
    <string name="password">hasło</string>
    <string name="password_again">hasło ponownie</string>
    <string name="email">email</string>
    <string name="forgot_password">Nie pamiętam hasła</string>
    <string name="signup">Zarejestruj się</string>
    <string name="login_header">Zaloguj się</string>
    <string name="register">Zarejestruj</string>
    <string name="button_newsfeed">Aktualności</string>
    <string name="button_chat">Czat</string>
    <string name="button_calendar">Kalendarz</string>
    <string name="button_settings">Ustawienia</string>
    <string name="nick_name">twój nick</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="action_settings">settings</string>
    <string name="title">tytuł</string>
    <string name="context">treść</string>
    <string name="logo">logo</string>
    <string name="add_new_post_header">Dodaj nowego posta</string>
    <string name="save_post">Wyślij</string>
</resources>
