<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.LoginAndRegisterActivity"
    android:padding="32dp">

    <TextView
        android:id="@+id/loginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/login_header"
        android:textSize="20sp"/>
    <EditText

        android:layout_marginTop="100dp"
        android:id="@+id/editTextEmail"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText

        android:id="@+id/editTextPassword"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextEmail"
        android:layout_alignStart="@+id/editTextEmail"
        android:layout_below="@+id/editTextEmail"
        android:layout_marginBottom="48dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button

        android:id="@+id/loginButton"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextEmail"
        android:layout_alignStart="@+id/editTextEmail"
        android:layout_below="@+id/editTextPassword"
        android:layout_marginBottom="20dp"
        android:text="@string/login_button"
        android:textAllCaps="false" />

    <Button
        android:layout_marginBottom="20dp"
        android:id="@+id/singupButton"
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editTextEmail"
        android:layout_below="@+id/loginButton"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:layout_alignLeft="@+id/editTextEmail" />

    <Button
        android:id="@+id/forgotPassButton"
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editTextEmail"
        android:layout_below="@+id/singupButton"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:layout_alignLeft="@+id/editTextEmail" />


</RelativeLayout>