<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:gravity="center"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/add_new_post_header"
        android:layout_alignParentLeft="true"
        android:textSize="24sp"
        android:paddingTop="24dp"/>

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:ems="10"
        android:inputType="text"
        android:text="@string/title"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="24dp"/>

    <EditText
        android:layout_marginTop="24dp"
        android:id="@+id/editTextContext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextTitle"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/context"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/buttonSavePost"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/save_post" />


</RelativeLayout>